Update to micro 0.45
Also fix lists leaking via HTTP referrer.

Breaking changes: Update to micro 0.45.

Close #61.

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <!-- NOTE: Use strict-origin once there is cross-browser support -->
+    <meta name="referrer" content="origin" />
 
     {% raw micro_dependencies() %}
     <link rel="stylesheet" href="{{ static_url('listling.css') }}" />
